--- a/AdaQP/config/reddit.yaml
+++ b/AdaQP/config/reddit.yaml
@@ -15,13 +15,15 @@ runtime:
   model_name: gcn
   learning_rate: 0.01
   weight_decay: 0
-  num_epoches: 20
+  num_epoches: 100
   mode: AdaQP
+  assign_scheme: uniform
   exp_path: exp
   logger_level: INFO
   log_steps: 10
 assignment:
-  profile_times: 100 # times for profiling to get bandwidth between workers
+  assign_cycle: 5 # times for profiling to get bandwidth between workers
   profile_data_length: 200 
   group_size: 100
   coe_lambda: 0.5
+  assign_bits: 8 # default uniform bits for quantization when no traced data is collected
